src/app/components/questions/swipe/swipe.component.scss
.swipe-instruction{
  display: flex;
  align-items: center;
  justify-content: center;
  margin:0 0 1rem 0;
  padding: 1rem;
  color: var(--ion-color-inria-grey);

  ion-icon{
    flex-shrink: 0;
  }

  span{
    margin-left: 1rem;
    font-size: 0.875rem;
  }
}

.swipe-cards {
  flex: 1;
  position:relative;
  align-self: center;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  width: 32vh;
  height: 32vh;
  text-align: center;

  &-progress{
    padding: 0;
    margin: 1rem;
    --knob-size:0;
    --knob-background:transparent;
    --knob-box-shadow: none;
    --bar-height:10px;
    --bar-border-radius:5px;
    overflow: hidden;
    border-radius: 1rem;

    &::part(bar){
      background: var(--ion-color-inria-light);
    }

    &::part(bar-active){
      background: var(--ion-color-inria-spe);
    }

    &::part(tick), &::part(tick-active){
      top: calc((var(--height) - var(--bar-height) + 4px) / 2);
      width: calc(var(--bar-height) - 4px);
      height: calc(var(--bar-height) - 4px);
      border-radius: 50%;
      background: #D0D7E1;
      transform: translateX(calc(-100% - 4px));
    }

    &::part(tick-active){
      background: white;
    }

    &::part(knob){
      display: none;
    }
  }
}

.swipe-card {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left:0;
  width: 100%;
  height: 100%;
  padding: 1rem;
  border-radius: 1rem;
  background-color: var(--ion-color-inria-spe);
  box-shadow: 0 1px 8px 0 #D5DDE9;
  font-weight: bold;
  color:white;
  z-index:10;

  &:before {
    content:'';
    position: absolute;
    height: 100%;
    width: 100%;
    border-radius: 1rem;
    background-color: rgba(var(--ion-color-inria-spe-rgb), 0);
    transform: rotate(5deg);
    transition: all .3s ease;
    z-index:-1;
  }

  &:nth-last-child(2):before {
    background-color: rgba(var(--ion-color-inria-spe-rgb), 0.3);
  }

  ion-icon{
    font-size: 2rem;
  }

  .swipe-card-choice{
    position: absolute;
    top:50%;
    left:50%;
    padding: 1rem;
    font-size: 1.5rem;
    font-weight: bold;
    text-transform: uppercase;
    color: var(--ion-color-inria-blue);
    background: white;
    border-radius: 1rem;
    transform: translate(-50%, -50%);
    z-index:1;
    opacity: 0.8;
  }
}

.swipe-actions{
  display: flex;
  justify-content: center;
  align-items: center;

  .swipe-action{
    display: flex;
    justify-content: center;
    align-items: center;
    width:4rem;
    height:4rem;
    margin: .2rem;
    background: var(--ion-color-inria-light);
    border-radius: 4rem;
    font-size: 2rem;

    &.small{
      width:2rem;
      height:2rem;
      font-size: 1rem;
    }

    &.hidden{
      opacity: 0;
    }
  }
}

